Bug 1257810 - ReleaseAcquire should be adequate for a counter; r=sfink